pseudo function and typo fixes

--- a/website/index.html
+++ b/website/index.html
@@ -88,7 +88,7 @@
 
 
 	<div id="footer">
-		<p>Copyright Rachel Logan</p>
+		<p>Copyright Rachel Logan and Nick McMillan</p>
 		<p>2020</p>
 	</div>
 
